--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "once": "^1.4.0",
     "p-cancelable": "^2.1.1",
     "pend": "^1.2.0",
+    "prettier": "^3.5.3",
     "progress": "^2.0.3",
     "pump": "^3.0.2",
     "quick-lru": "^5.1.1",
