--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Desenvolvimento de um sistema desktop para gestão de ordem de serviços de uma oficina de motos.",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron-forge start",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "repository": {
     "type": "git",
@@ -18,7 +20,15 @@
   },
   "homepage": "https://github.com/somadekadane/electron#readme",
   "devDependencies": {
-    "electron": "^35.4.0"
+    "@electron-forge/cli": "^7.8.1",
+    "@electron-forge/maker-deb": "^7.8.1",
+    "@electron-forge/maker-rpm": "^7.8.1",
+    "@electron-forge/maker-squirrel": "^7.8.1",
+    "@electron-forge/maker-zip": "^7.8.1",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.8.1",
+    "@electron-forge/plugin-fuses": "^7.8.1",
+    "@electron/fuses": "^1.8.0",
+    "electron": "^35.5.0"
   },
   "dependencies": {
     "boolean": "^3.2.0",
@@ -34,6 +44,7 @@
     "define-properties": "^1.2.1",
     "detect-node": "^2.1.0",
     "electron-prompt": "^1.7.0",
+    "electron-squirrel-startup": "^1.0.1",
     "end-of-stream": "^1.4.4",
     "env-paths": "^2.2.1",
     "es-define-property": "^1.0.1",
